--- a/CV-Styling.css
+++ b/CV-Styling.css
@@ -88,6 +88,8 @@ hr {
         padding-right: 20px;
         padding-left: 20px;
         color: #e0fbfc;
+        padding-right: 100px;
+        padding-left: 100px;
 }
 
 .grid-item-2 h2 {
